--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.11",
     "buffer": "^6.0.3",
     "grommet": "^2.21.0",
     "grommet-icons": "^4.7.0",
     "nodejs-base64": "^2.0.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
